--- a/index.html
+++ b/index.html
@@ -14,86 +14,116 @@
 
 <body>
 
-    <!-- Rating state start -->
+    <main>
 
-    <div class="front-card">
-
-        <div class="card-star">
-            <img src="./images/icon-star.svg" alt="">
-        </div>
-
-
-        <div class="card-title">
-            <h1>How did we do?</h1>
-        </div>
-
-        <div class="card-para">
-            <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve
-                our offering!
-            </p>
-        </div>
-
-
-        <div>
-            <ul class="card-ratings">
-
-                <li class="rating-numbers">1</li>
-                <li class="rating-numbers">2</li>
-                <li class="rating-numbers">3</li>
-                <li class="rating-numbers">4</li>
-                <li class="rating-numbers">5</li>
-
-            </ul>
-        </div>
-
-        <div class="submit-button">
-            <button class="submit"> SUBMIT</button>
-        </div>
-
-    </div>
-
-    <!-- Rating state end -->
+        <div class="container">
 
 
 
+            <div class="cards">
+
+                <!-- Thank you state start -->
+                <div class="thanks-card">
+
+                    <div class="thanks-image">
+                        <img src="./images/illustration-thank-you.svg" alt="">
+                    </div>
+
+                    <div class="rating-review">
+                        <p class="rate-text">
+                            You selected
+                            <span class="rate"></span> out of 5
+                        </p>
+                    </div>
+
+                    <div class="thanks-card-tetx">
+                        <div class="thank-you">
+                            <h1>Thank you!</h1>
+                        </div>
+
+                        <div class="thanks-para">
+                            <p>
+                                We appreciate you taking the time to give a rating. If you ever need more support, don’t
+                                hesitate to
+                                get
+                                in touch!
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div>
+                        <button class="back-btn">Rate again</button>
+                    </div>
 
 
 
-    <!-- Thank you state start -->
-    <div class="thanks-card">
+                </div>
+                <!-- Thank you state end -->
 
-        <div class="thanks-image">
-            <img src="./images/illustration-thank-you.svg" alt="">
-        </div>
 
-        <div class="rating-review">
-            <p class="rate-text">
-                You selected
-                <span class="rate"></span> out of 5
-            </p>
-        </div>
+                <!-- Rating state start -->
 
-        <div class="thank-you">
-            <h1>Thank you!</h1>
-        </div>
+                <div class="front-card">
 
-        <div class="thanks-para">
-            <p>
-                We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get
-                in touch!
-            </p>
+                    <div class="card-star">
+                        <img src="./images/icon-star.svg" alt="">
+                    </div>
 
-            <div>
-                <button class="back-btn">Rate again</button>
+
+                    <div class="front-card-text">
+
+                        <div class="card-title">
+                            <h1>How did we do?</h1>
+                        </div>
+
+                        <div class="card-para">
+                            <p>Please let us know how we did with your support request. All feedback is appreciated to
+                                help
+                                us
+                                improve
+                                our offering!
+                            </p>
+                        </div>
+
+                    </div>
+
+
+                    <div>
+                        <ul class="card-ratings">
+
+                            <li class="rating-numbers initial-color">1</li>
+                            <li class="rating-numbers initial-color">2</li>
+                            <li class="rating-numbers initial-color">3</li>
+                            <li class="rating-numbers initial-color">4</li>
+                            <li class="rating-numbers initial-color">5</li>
+
+                        </ul>
+                    </div>
+
+                    <div class="submit-button">
+                        <button class="submit"> SUBMIT</button>
+                    </div>
+
+                </div>
+
+                <!-- Rating state end -->
+
+
+
+
+
+
+
             </div>
+
+
+
+
+
         </div>
 
-
-    </div>
-    <!-- Thank you state end -->
-
-
-
+    </main>
 
     <script src="main.js"></script>
 </body>
